# claudey

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  commitlint.config.js  go.mod  install.sh  package.json
.claude/: package-manager.json
.claude-plugin/: PLUGIN_SCHEMA_NOTES.md  README.md  marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  maintenance.yml  release.yml  reusable-release.yml  reusable-test.yml  reusable-validate.yml
agents/: architect.md  code-reviewer.md  database-reviewer.md  tdd-guide.md
commands/: checkpoint.md  e2e.md  eval.md  evolve.md  go-build.md  go-review.md  go-test.md  gsd-workflow.md  instinct-export.md  instinct-import.md  instinct-status.md  learn-eval.md  learn.md  multi-backend.md  multi-execute.md  multi-frontend.md  multi-plan.md  multi-workflow.md  orchestrate.md  plan.md  pm2.md  python-review.md  refactor-clean.md  sessions.md  setup-pm.md  skill-create.md  tdd.md  test-coverage.md
contexts/: dev.md  research.md  review.md
docs/: README.md  architecture.md  binary.md  commands.md  hooks.md  rules.md  skills.md  token-optimization.md
hooks/: README.md  hooks.json
internal/aliases/: aliases.go  aliases_test.go
internal/datetime/: datetime.go  datetime_test.go
internal/fileutil/: fileutil.go  (+2 more)
mcp-configs/: mcp-servers.json
plugins/: README.md
rules/: README.md
schemas/: hooks.schema.json  plugin.schema.json
src/: aliases.rs  datetime.rs  fileutil.rs  gitutil.rs  hookio.rs  main.rs  platform.rs  sysutil.rs  testutil.rs
tests/: integration.rs
(+134 files in other folders)
